# mjpeg

./: Cargo.toml  README.md
html/: index.html
src/: main.rs  scaler.rs
