[package]
name = "mjpeg-proxy"
version = "0.1.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
futures = { version = "0.3.4", features = ["thread-pool"] }
hyper = "0.13"
image = "0.23"
regex = "1.3.5"
tokio = { version = "0.2", features = ["full"] }
zmq = "0.9"