[package]
name = "mjpeg-proxy"
version = "0.2.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
env_logger = "0.7.1"
futures = { version = "0.3.4", features = ["thread-pool"] }
futures-util = "^0.3.4"
hyper = { version = "^0.13", features = ["stream"] }
image = "^0.23"
iter-read = "0.2.1"
lazy_static = "^1.4.0"
log = "^0.4"
once_cell = "^1.3.1"
regex = "^1.3.5"
simple-error = "^0.2.1"
tiny_http = "0.6.2"
tokio = { version = "^0.2", features = ["full"] }
zmq = "^0.9"